// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`useResourcesTree all appresource dir 1`] = `
[
  {
    "appResources": [],
    "directory": {
      "_tableName": "SpAppResourceDir",
      "collection": null,
      "createdByAgent": "/api/specify/agent/3/",
      "discipline": null,
      "disciplineType": null,
      "id": 3,
      "isPersonal": false,
      "modifiedByAgent": null,
      "resource_uri": "/api/specify/spappresourcedir/3/",
      "scope": "global",
      "spPersistedAppResources": "/api/specify/spappresource/?spappresourcedir=3",
      "spPersistedViewSets": "/api/specify/spviewsetobj/?spappresourcedir=3",
      "specifyUser": null,
      "timestampCreated": "2012-08-10T16:12:08",
      "timestampModified": "2012-08-10T16:12:08",
      "userType": "Global Prefs",
      "version": 683,
    },
    "key": "globalResource",
    "label": "Global Resources",
    "subCategories": [],
    "viewSets": [],
  },
  {
    "appResources": [],
    "directory": undefined,
    "key": "disciplineResources",
    "label": "Discipline Resources",
    "subCategories": [
      {
        "appResources": [],
        "directory": {
          "_tableName": "SpAppResourceDir",
          "collection": "/api/specify/collection/4/",
          "createdByAgent": null,
          "discipline": "/api/specify/discipline/3/",
          "disciplineType": null,
          "isPersonal": false,
          "modifiedByAgent": null,
          "resource_uri": undefined,
          "specifyUser": null,
          "timestampCreated": "2022-08-31",
          "timestampModified": null,
          "userType": null,
          "version": 1,
        },
        "key": "discipline_3",
        "label": "Ichthyology",
        "subCategories": [
          {
            "appResources": [],
            "directory": {
              "_tableName": "SpAppResourceDir",
              "collection": "/api/specify/collection/65536/",
              "createdByAgent": null,
              "discipline": "/api/specify/discipline/3/",
              "disciplineType": null,
              "isPersonal": false,
              "modifiedByAgent": null,
              "resource_uri": undefined,
              "specifyUser": null,
              "timestampCreated": "2022-08-31",
              "timestampModified": null,
              "userType": null,
              "version": 1,
            },
            "key": "collection_65536",
            "label": "KUFishTeaching",
            "subCategories": [
              {
                "appResources": [],
                "directory": undefined,
                "key": "users",
                "label": "User Accounts",
                "subCategories": [
                  {
                    "appResources": [
                      {
                        "_tableName": "SpAppResource",
                        "allPermissionLevel": null,
                        "createdByAgent": "/api/specify/agent/3/",
                        "description": "QueryExtraList",
                        "group": null,
                        "groupPermissionLevel": null,
                        "id": 3,
                        "level": 0,
                        "metaData": null,
                        "mimeType": "text/xml",
                        "modifiedByAgent": "/api/specify/agent/3/",
                        "name": "QueryExtraList",
                        "ownerPermissionLevel": null,
                        "resource_uri": "/api/specify/spappresource/3/",
                        "spAppResourceDatas": "/api/specify/spappresourcedata/?spappresource=3",
                        "spAppResourceDir": "/api/specify/spappresourcedir/4/",
                        "spReports": "/api/specify/spreport/?appresource=3",
                        "specifyUser": "/api/specify/specifyuser/4/",
                        "timestampCreated": "2012-08-10T16:12:05",
                        "version": 2,
                      },
                      {
                        "_tableName": "SpAppResource",
                        "allPermissionLevel": null,
                        "createdByAgent": "/api/specify/agent/3/",
                        "description": null,
                        "group": null,
                        "groupPermissionLevel": null,
                        "id": 4,
                        "level": 3,
                        "metaData": null,
                        "mimeType": null,
                        "modifiedByAgent": null,
                        "name": "preferences",
                        "ownerPermissionLevel": null,
                        "resource_uri": "/api/specify/spappresource/4/",
                        "spAppResourceDatas": "/api/specify/spappresourcedata/?spappresource=4",
                        "spAppResourceDir": "/api/specify/spappresourcedir/4/",
                        "spReports": "/api/specify/spreport/?appresource=4",
                        "specifyUser": "/api/specify/specifyuser/4/",
                        "timestampCreated": "2012-08-10T16:12:08",
                        "version": 683,
                      },
                      {
                        "_tableName": "SpAppResource",
                        "allPermissionLevel": null,
                        "createdByAgent": "/api/specify/agent/3/",
                        "description": null,
                        "group": null,
                        "groupPermissionLevel": null,
                        "id": 73,
                        "label": "Default User Preferences",
                        "level": 0,
                        "metaData": null,
                        "mimeType": "application/json",
                        "modifiedByAgent": null,
                        "name": "DefaultUserPreferences",
                        "ownerPermissionLevel": null,
                        "resource_uri": "/api/specify/spappresource/73/",
                        "spAppResourceDatas": "/api/specify/spappresourcedata/?spappresource=73",
                        "spAppResourceDir": "/api/specify/spappresourcedir/4/",
                        "spReports": "/api/specify/spreport/?appresource=73",
                        "specifyUser": "/api/specify/specifyuser/4/",
                        "timestampCreated": "2025-07-04T00:00:00",
                        "version": 1,
                      },
                    ],
                    "directory": {
                      "_tableName": "SpAppResourceDir",
                      "collection": "/api/specify/collection/65536/",
                      "createdByAgent": "/api/specify/agent/3/",
                      "discipline": "/api/specify/discipline/3/",
                      "disciplineType": "Ichthyology",
                      "id": 4,
                      "isPersonal": true,
                      "modifiedByAgent": null,
                      "resource_uri": "/api/specify/spappresourcedir/4/",
                      "scope": "user",
                      "spPersistedAppResources": "/api/specify/spappresource/?spappresourcedir=4",
                      "spPersistedViewSets": "/api/specify/spviewsetobj/?spappresourcedir=4",
                      "specifyUser": "/api/specify/specifyuser/4/",
                      "timestampCreated": "2012-10-01T10:29:36",
                      "timestampModified": "2012-10-01T10:29:36",
                      "userType": "manager",
                      "version": 3,
                    },
                    "key": "collection_65536_user_5",
                    "label": "cmeyer",
                    "subCategories": [],
                    "viewSets": [
                      {
                        "_tableName": "SpViewSetObj",
                        "createdByAgent": "/api/specify/agent/2151/",
                        "description": null,
                        "fileName": null,
                        "id": 5,
                        "level": 2,
                        "metaData": null,
                        "modifiedByAgent": null,
                        "name": "fish.views",
                        "resource_uri": "/api/specify/spviewsetobj/5/",
                        "spAppResourceDatas": "/api/specify/spappresourcedata/?spviewsetobj=5",
                        "spAppResourceDir": "/api/specify/spappresourcedir/4/",
                        "timestampCreated": "2014-01-28T08:44:29",
                        "timestampModified": "2014-01-28T08:44:29",
                        "version": 6,
                      },
                    ],
                  },
                  {
                    "appResources": [
                      {
                        "_tableName": "SpAppResource",
                        "allPermissionLevel": null,
                        "createdByAgent": "/api/specify/agent/3/",
                        "description": "QueryExtraList",
                        "group": null,
                        "groupPermissionLevel": null,
                        "id": 3,
                        "level": 0,
                        "metaData": null,
                        "mimeType": "text/xml",
                        "modifiedByAgent": "/api/specify/agent/3/",
                        "name": "QueryExtraList",
                        "ownerPermissionLevel": null,
                        "resource_uri": "/api/specify/spappresource/3/",
                        "spAppResourceDatas": "/api/specify/spappresourcedata/?spappresource=3",
                        "spAppResourceDir": "/api/specify/spappresourcedir/4/",
                        "spReports": "/api/specify/spreport/?appresource=3",
                        "specifyUser": "/api/specify/specifyuser/4/",
                        "timestampCreated": "2012-08-10T16:12:05",
                        "version": 2,
                      },
                      {
                        "_tableName": "SpAppResource",
                        "allPermissionLevel": null,
                        "createdByAgent": "/api/specify/agent/3/",
                        "description": null,
                        "group": null,
                        "groupPermissionLevel": null,
                        "id": 4,
                        "level": 3,
                        "metaData": null,
                        "mimeType": null,
                        "modifiedByAgent": null,
                        "name": "preferences",
                        "ownerPermissionLevel": null,
                        "resource_uri": "/api/specify/spappresource/4/",
                        "spAppResourceDatas": "/api/specify/spappresourcedata/?spappresource=4",
                        "spAppResourceDir": "/api/specify/spappresourcedir/4/",
                        "spReports": "/api/specify/spreport/?appresource=4",
                        "specifyUser": "/api/specify/specifyuser/4/",
                        "timestampCreated": "2012-08-10T16:12:08",
                        "version": 683,
                      },
                      {
                        "_tableName": "SpAppResource",
                        "allPermissionLevel": null,
                        "createdByAgent": "/api/specify/agent/3/",
                        "description": null,
                        "group": null,
                        "groupPermissionLevel": null,
                        "id": 73,
                        "label": "Default User Preferences",
                        "level": 0,
                        "metaData": null,
                        "mimeType": "application/json",
                        "modifiedByAgent": null,
                        "name": "DefaultUserPreferences",
                        "ownerPermissionLevel": null,
                        "resource_uri": "/api/specify/spappresource/73/",
                        "spAppResourceDatas": "/api/specify/spappresourcedata/?spappresource=73",
                        "spAppResourceDir": "/api/specify/spappresourcedir/4/",
                        "spReports": "/api/specify/spreport/?appresource=73",
                        "specifyUser": "/api/specify/specifyuser/4/",
                        "timestampCreated": "2025-07-04T00:00:00",
                        "version": 1,
                      },
                    ],
                    "directory": {
                      "_tableName": "SpAppResourceDir",
                      "collection": "/api/specify/collection/65536/",
                      "createdByAgent": "/api/specify/agent/3/",
                      "discipline": "/api/specify/discipline/3/",
                      "disciplineType": "Ichthyology",
                      "id": 4,
                      "isPersonal": true,
                      "modifiedByAgent": null,
                      "resource_uri": "/api/specify/spappresourcedir/4/",
                      "scope": "user",
                      "spPersistedAppResources": "/api/specify/spappresource/?spappresourcedir=4",
                      "spPersistedViewSets": "/api/specify/spviewsetobj/?spappresourcedir=4",
                      "specifyUser": "/api/specify/specifyuser/4/",
                      "timestampCreated": "2012-10-01T10:29:36",
                      "timestampModified": "2012-10-01T10:29:36",
                      "userType": "manager",
                      "version": 3,
                    },
                    "key": "collection_65536_user_4",
                    "label": "Vertnet",
                    "subCategories": [],
                    "viewSets": [
                      {
                        "_tableName": "SpViewSetObj",
                        "createdByAgent": "/api/specify/agent/2151/",
                        "description": null,
                        "fileName": null,
                        "id": 5,
                        "level": 2,
                        "metaData": null,
                        "modifiedByAgent": null,
                        "name": "fish.views",
                        "resource_uri": "/api/specify/spviewsetobj/5/",
                        "spAppResourceDatas": "/api/specify/spappresourcedata/?spviewsetobj=5",
                        "spAppResourceDir": "/api/specify/spappresourcedir/4/",
                        "timestampCreated": "2014-01-28T08:44:29",
                        "timestampModified": "2014-01-28T08:44:29",
                        "version": 6,
                      },
                    ],
                  },
                ],
                "viewSets": [],
              },
              {
                "appResources": [],
                "directory": undefined,
                "key": "userTypes",
                "label": "User Types",
                "subCategories": [
                  {
                    "appResources": [],
                    "directory": {
                      "_tableName": "SpAppResourceDir",
                      "collection": "/api/specify/collection/65536/",
                      "createdByAgent": null,
                      "discipline": "/api/specify/discipline/3/",
                      "disciplineType": null,
                      "isPersonal": false,
                      "modifiedByAgent": null,
                      "resource_uri": undefined,
                      "specifyUser": null,
                      "timestampCreated": "2022-08-31",
                      "timestampModified": null,
                      "userType": "fullaccess",
                      "version": 1,
                    },
                    "key": "collection_65536_userType_FullAccess",
                    "label": "FullAccess",
                    "subCategories": [],
                    "viewSets": [],
                  },
                  {
                    "appResources": [],
                    "directory": {
                      "_tableName": "SpAppResourceDir",
                      "collection": "/api/specify/collection/65536/",
                      "createdByAgent": null,
                      "discipline": "/api/specify/discipline/3/",
                      "disciplineType": null,
                      "isPersonal": false,
                      "modifiedByAgent": null,
                      "resource_uri": undefined,
                      "specifyUser": null,
                      "timestampCreated": "2022-08-31",
                      "timestampModified": null,
                      "userType": "guest",
                      "version": 1,
                    },
                    "key": "collection_65536_userType_Guest",
                    "label": "Guest",
                    "subCategories": [],
                    "viewSets": [],
                  },
                  {
                    "appResources": [],
                    "directory": {
                      "_tableName": "SpAppResourceDir",
                      "collection": "/api/specify/collection/65536/",
                      "createdByAgent": null,
                      "discipline": "/api/specify/discipline/3/",
                      "disciplineType": null,
                      "isPersonal": false,
                      "modifiedByAgent": null,
                      "resource_uri": undefined,
                      "specifyUser": null,
                      "timestampCreated": "2022-08-31",
                      "timestampModified": null,
                      "userType": "limitedaccess",
                      "version": 1,
                    },
                    "key": "collection_65536_userType_LimitedAccess",
                    "label": "LimitedAccess",
                    "subCategories": [],
                    "viewSets": [],
                  },
                  {
                    "appResources": [],
                    "directory": {
                      "_tableName": "SpAppResourceDir",
                      "collection": "/api/specify/collection/65536/",
                      "createdByAgent": null,
                      "discipline": "/api/specify/discipline/3/",
                      "disciplineType": null,
                      "isPersonal": false,
                      "modifiedByAgent": null,
                      "resource_uri": undefined,
                      "specifyUser": null,
                      "timestampCreated": "2022-08-31",
                      "timestampModified": null,
                      "userType": "manager",
                      "version": 1,
                    },
                    "key": "collection_65536_userType_Manager",
                    "label": "Manager",
                    "subCategories": [],
                    "viewSets": [],
                  },
                ],
                "viewSets": [],
              },
            ],
            "viewSets": [],
          },
        ],
        "viewSets": [],
      },
    ],
    "viewSets": [],
  },
]
`;

exports[`useResourcesTree missing appresource dir 1`] = `
[
  {
    "appResources": [
      {
        "_tableName": "SpAppResource",
        "allPermissionLevel": null,
        "createdByAgent": "/api/specify/agent/3/",
        "description": null,
        "group": null,
        "groupPermissionLevel": null,
        "id": 4,
        "label": "Global Preferences",
        "level": 3,
        "metaData": null,
        "mimeType": null,
        "modifiedByAgent": null,
        "name": "preferences",
        "ownerPermissionLevel": null,
        "resource_uri": "/api/specify/spappresource/4/",
        "spAppResourceDatas": "/api/specify/spappresourcedata/?spappresource=4",
        "spAppResourceDir": "/api/specify/spappresourcedir/3/",
        "spReports": "/api/specify/spreport/?appresource=4",
        "specifyUser": "/api/specify/specifyuser/4/",
        "timestampCreated": "2012-08-10T16:12:08",
        "version": 683,
      },
    ],
    "directory": {
      "_tableName": "SpAppResourceDir",
      "collection": null,
      "createdByAgent": "/api/specify/agent/3/",
      "discipline": null,
      "disciplineType": null,
      "id": 3,
      "isPersonal": false,
      "modifiedByAgent": null,
      "resource_uri": "/api/specify/spappresourcedir/3/",
      "scope": "global",
      "spPersistedAppResources": "/api/specify/spappresource/?spappresourcedir=3",
      "spPersistedViewSets": "/api/specify/spviewsetobj/?spappresourcedir=3",
      "specifyUser": null,
      "timestampCreated": "2012-08-10T16:12:08",
      "timestampModified": "2012-08-10T16:12:08",
      "userType": "Global Prefs",
      "version": 683,
    },
    "key": "globalResource",
    "label": "Global Resources",
    "subCategories": [],
    "viewSets": [],
  },
  {
    "appResources": [],
    "directory": undefined,
    "key": "disciplineResources",
    "label": "Discipline Resources",
    "subCategories": [
      {
        "appResources": [],
        "directory": {
          "_tableName": "SpAppResourceDir",
          "collection": "/api/specify/collection/4/",
          "createdByAgent": null,
          "discipline": "/api/specify/discipline/3/",
          "disciplineType": null,
          "isPersonal": false,
          "modifiedByAgent": null,
          "resource_uri": undefined,
          "specifyUser": null,
          "timestampCreated": "2022-08-31",
          "timestampModified": null,
          "userType": null,
          "version": 1,
        },
        "key": "discipline_3",
        "label": "Ichthyology",
        "subCategories": [
          {
            "appResources": [],
            "directory": {
              "_tableName": "SpAppResourceDir",
              "collection": "/api/specify/collection/65536/",
              "createdByAgent": null,
              "discipline": "/api/specify/discipline/3/",
              "disciplineType": null,
              "isPersonal": false,
              "modifiedByAgent": null,
              "resource_uri": undefined,
              "specifyUser": null,
              "timestampCreated": "2022-08-31",
              "timestampModified": null,
              "userType": null,
              "version": 1,
            },
            "key": "collection_65536",
            "label": "KUFishTeaching",
            "subCategories": [
              {
                "appResources": [],
                "directory": undefined,
                "key": "users",
                "label": "User Accounts",
                "subCategories": [
                  {
                    "appResources": [],
                    "directory": {
                      "_tableName": "SpAppResourceDir",
                      "collection": "/api/specify/collection/65536/",
                      "createdByAgent": "/api/specify/agent/3/",
                      "discipline": "/api/specify/discipline/3/",
                      "disciplineType": "Ichthyology",
                      "id": 4,
                      "isPersonal": true,
                      "modifiedByAgent": null,
                      "resource_uri": "/api/specify/spappresourcedir/4/",
                      "scope": "user",
                      "spPersistedAppResources": "/api/specify/spappresource/?spappresourcedir=4",
                      "spPersistedViewSets": "/api/specify/spviewsetobj/?spappresourcedir=4",
                      "specifyUser": "/api/specify/specifyuser/4/",
                      "timestampCreated": "2012-10-01T10:29:36",
                      "timestampModified": "2012-10-01T10:29:36",
                      "userType": "manager",
                      "version": 3,
                    },
                    "key": "collection_65536_user_5",
                    "label": "cmeyer",
                    "subCategories": [],
                    "viewSets": [],
                  },
                  {
                    "appResources": [],
                    "directory": {
                      "_tableName": "SpAppResourceDir",
                      "collection": "/api/specify/collection/65536/",
                      "createdByAgent": "/api/specify/agent/3/",
                      "discipline": "/api/specify/discipline/3/",
                      "disciplineType": "Ichthyology",
                      "id": 4,
                      "isPersonal": true,
                      "modifiedByAgent": null,
                      "resource_uri": "/api/specify/spappresourcedir/4/",
                      "scope": "user",
                      "spPersistedAppResources": "/api/specify/spappresource/?spappresourcedir=4",
                      "spPersistedViewSets": "/api/specify/spviewsetobj/?spappresourcedir=4",
                      "specifyUser": "/api/specify/specifyuser/4/",
                      "timestampCreated": "2012-10-01T10:29:36",
                      "timestampModified": "2012-10-01T10:29:36",
                      "userType": "manager",
                      "version": 3,
                    },
                    "key": "collection_65536_user_4",
                    "label": "Vertnet",
                    "subCategories": [],
                    "viewSets": [],
                  },
                ],
                "viewSets": [],
              },
              {
                "appResources": [],
                "directory": undefined,
                "key": "userTypes",
                "label": "User Types",
                "subCategories": [
                  {
                    "appResources": [],
                    "directory": {
                      "_tableName": "SpAppResourceDir",
                      "collection": "/api/specify/collection/65536/",
                      "createdByAgent": null,
                      "discipline": "/api/specify/discipline/3/",
                      "disciplineType": null,
                      "isPersonal": false,
                      "modifiedByAgent": null,
                      "resource_uri": undefined,
                      "specifyUser": null,
                      "timestampCreated": "2022-08-31",
                      "timestampModified": null,
                      "userType": "fullaccess",
                      "version": 1,
                    },
                    "key": "collection_65536_userType_FullAccess",
                    "label": "FullAccess",
                    "subCategories": [],
                    "viewSets": [],
                  },
                  {
                    "appResources": [],
                    "directory": {
                      "_tableName": "SpAppResourceDir",
                      "collection": "/api/specify/collection/65536/",
                      "createdByAgent": null,
                      "discipline": "/api/specify/discipline/3/",
                      "disciplineType": null,
                      "isPersonal": false,
                      "modifiedByAgent": null,
                      "resource_uri": undefined,
                      "specifyUser": null,
                      "timestampCreated": "2022-08-31",
                      "timestampModified": null,
                      "userType": "guest",
                      "version": 1,
                    },
                    "key": "collection_65536_userType_Guest",
                    "label": "Guest",
                    "subCategories": [],
                    "viewSets": [],
                  },
                  {
                    "appResources": [],
                    "directory": {
                      "_tableName": "SpAppResourceDir",
                      "collection": "/api/specify/collection/65536/",
                      "createdByAgent": null,
                      "discipline": "/api/specify/discipline/3/",
                      "disciplineType": null,
                      "isPersonal": false,
                      "modifiedByAgent": null,
                      "resource_uri": undefined,
                      "specifyUser": null,
                      "timestampCreated": "2022-08-31",
                      "timestampModified": null,
                      "userType": "limitedaccess",
                      "version": 1,
                    },
                    "key": "collection_65536_userType_LimitedAccess",
                    "label": "LimitedAccess",
                    "subCategories": [],
                    "viewSets": [],
                  },
                  {
                    "appResources": [],
                    "directory": {
                      "_tableName": "SpAppResourceDir",
                      "collection": "/api/specify/collection/65536/",
                      "createdByAgent": null,
                      "discipline": "/api/specify/discipline/3/",
                      "disciplineType": null,
                      "isPersonal": false,
                      "modifiedByAgent": null,
                      "resource_uri": undefined,
                      "specifyUser": null,
                      "timestampCreated": "2022-08-31",
                      "timestampModified": null,
                      "userType": "manager",
                      "version": 1,
                    },
                    "key": "collection_65536_userType_Manager",
                    "label": "Manager",
                    "subCategories": [],
                    "viewSets": [],
                  },
                ],
                "viewSets": [],
              },
            ],
            "viewSets": [],
          },
        ],
        "viewSets": [],
      },
    ],
    "viewSets": [],
  },
]
`;
